feat: add command generate swag documentation
